examples/errors/label-in-org.spasm
dp_label:
   nop       ; dummy

org dp_label